syntax = "proto3";

package consulo.maven.protobuf;

message IconGroupIndex {
    int32 version = 1;
    
    repeated IconGroup iconGroups = 2;
}

message IconGroup {
    string id = 1;

    string theme = 2;

    repeated Icon icons = 3;
}

message Icon {
    string id = 1;

    int32 width = 2;

    int32 height = 3;

    bytes data = 4;

    IconType type = 5;
}

enum IconType {
    SVG = 0;
    PNG = 1;
}