syntax = "proto3";

package consulo.maven.protobuf;

message JarInfo {
    string jarName = 1;

    repeated string paths = 2;
}

message JarIndex {
    int32 version = 1;

    repeated JarInfo jars = 2;
}